--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 12:05:19 2018</p>
+         Last Run: Mon Jul 16 13:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -43,13 +43,13 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>29</td>
+                        <td>29</td>
                         <td>0</td>
-                        <td>25</td>
+                        <td>24</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>0</td>
                      </tr>
                      <tr>
@@ -60,7 +60,7 @@
                         <td>0</td>
                         <td>29</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>ESE</td>
                         <td>0</td>
                      </tr>
@@ -107,7 +107,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "29",
-                 "28",
+                 "29",
                  "27"
                ]
              },
@@ -118,7 +118,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "29",
-                 "28",
+                 "29",
                  "27"
                ]
              }
@@ -181,7 +181,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "22",
-                 "25",
+                 "24",
                  "29"
                ]
              },
@@ -204,12 +204,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 12:05:19 2018</p>
+         Last Run: Mon Jul 16 13:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -238,7 +239,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>56</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -250,7 +251,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>49</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -262,7 +263,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>57</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -390,9 +391,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "49",
-                 "57"
+                 "40",
+                 "33",
+                 "41"
                ]
              }
            ]
@@ -409,7 +410,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 12:05:19 2018</p>
+         Last Run: Mon Jul 16 13:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -431,10 +432,10 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>24</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>3</td>
                         <td>11</td>
                         <td>SE</td>
@@ -445,19 +446,19 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>40</td>
-                        <td>50</td>
+                        <td>39</td>
+                        <td>49</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>53</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>54</td>
+                        <td>51</td>
                         <td>52</td>
                         <td>1</td>
                         <td>11</td>
@@ -467,14 +468,14 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>57</td>
-                        <td>56</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>55</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>69</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,10 +520,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
+                 "23",
                  "23",
                  "22",
-                 "21"
+                 "20"
                ]
              },
              {
@@ -531,10 +532,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
+                 "23",
                  "23",
                  "22",
-                 "21"
+                 "20"
                ]
              }
            ]
@@ -587,9 +588,9 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "40",
-                 "54",
-                 "57"
+                 "39",
+                 "51",
+                 "55"
                ]
              },
              {
@@ -597,10 +598,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "50",
+                 "49",
+                 "49",
                  "52",
-                 "56"
+                 "58"
                ]
              },
              {
@@ -609,9 +610,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "52",
-                 "53",
+                 "54",
                  "64",
-                 "69"
+                 "68"
                ]
              }
            ]
@@ -628,7 +629,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 12:05:19 2018</p>
+         Last Run: Mon Jul 16 13:05:09 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -652,59 +653,59 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>56</td>
                         <td>3</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WNW</td>
-                        <td>47</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>35</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>34</td>
                         <td>49</td>
                         <td>4</td>
-                        <td>8</td>
+                        <td>11</td>
                         <td>NW</td>
-                        <td>50</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>24</td>
-                        <td>45</td>
-                        <td>5</td>
-                        <td>8</td>
+                        <td>44</td>
+                        <td>6</td>
+                        <td>13</td>
                         <td>NW</td>
-                        <td>50</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>23</td>
-                        <td>41</td>
+                        <td>19</td>
+                        <td>40</td>
                         <td>5</td>
-                        <td>10</td>
+                        <td>13</td>
                         <td>WNW</td>
-                        <td>66</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>20</td>
+                        <td>15</td>
                         <td>39</td>
                         <td>5</td>
-                        <td>10</td>
-                        <td>NW</td>
+                        <td>13</td>
+                        <td>WNW</td>
                         <td>66</td>
                      </tr>
                   </tbody>
@@ -752,8 +753,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "16",
-                 "17",
                  "18",
+                 "19",
                  "19",
                  "20"
                ]
@@ -765,8 +766,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "16",
-                 "17",
                  "18",
+                 "19",
                  "19",
                  "20"
                ]
@@ -821,11 +822,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "33",
-                 "35",
+                 "32",
+                 "34",
                  "24",
-                 "23",
-                 "20"
+                 "19",
+                 "15"
                ]
              },
              {
@@ -835,8 +836,8 @@
                "data":[
                  "56",
                  "49",
-                 "45",
-                 "41",
+                 "44",
+                 "40",
                  "39"
                ]
              },
@@ -845,10 +846,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "44",
+                 "46",
                  "47",
-                 "50",
-                 "50",
-                 "66",
+                 "64",
                  "66"
                ]
              }
