--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 13:05:09 2018</p>
+         Last Run: Mon Jul 16 14:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -31,12 +31,12 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>29</td>
-                        <td>29</td>
+                        <td>30</td>
+                        <td>30</td>
                         <td>0</td>
-                        <td>22</td>
+                        <td>21</td>
                         <td>2</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>SE</td>
                         <td>1</td>
                      </tr>
@@ -61,7 +61,7 @@
                         <td>29</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>ESE</td>
+                        <td>SE</td>
                         <td>0</td>
                      </tr>
                   </tbody>
@@ -106,7 +106,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "29",
+                 "30",
                  "29",
                  "27"
                ]
@@ -117,7 +117,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "29",
+                 "30",
                  "29",
                  "27"
                ]
@@ -180,7 +180,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "22",
+                 "21",
                  "24",
                  "29"
                ]
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 13:05:09 2018</p>
+         Last Run: Mon Jul 16 14:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -247,7 +247,7 @@
                         <td>28</td>
                         <td>28</td>
                         <td>4</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -263,7 +263,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>41</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -382,7 +382,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "31",
-                 "35",
+                 "34",
                  "42"
                ]
              },
@@ -393,7 +393,7 @@
                "data":[
                  "40",
                  "33",
-                 "41"
+                 "42"
                ]
              }
            ]
@@ -410,7 +410,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 13:05:09 2018</p>
+         Last Run: Mon Jul 16 14:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -439,7 +439,7 @@
                         <td>3</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>52</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -451,15 +451,15 @@
                         <td>2</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>54</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>51</td>
-                        <td>52</td>
+                        <td>49</td>
+                        <td>53</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -470,7 +470,7 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>55</td>
+                        <td>52</td>
                         <td>58</td>
                         <td>0</td>
                         <td>13</td>
@@ -589,8 +589,8 @@
                "data":[
                  "24",
                  "39",
-                 "51",
-                 "55"
+                 "49",
+                 "52"
                ]
              },
              {
@@ -600,7 +600,7 @@
                "data":[
                  "49",
                  "49",
-                 "52",
+                 "53",
                  "58"
                ]
              },
@@ -609,8 +609,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "54",
+                 "51",
+                 "53",
                  "64",
                  "68"
                ]
@@ -629,7 +629,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Jul 16 13:05:09 2018</p>
+         Last Run: Mon Jul 16 14:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -650,63 +650,63 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>32</td>
-                        <td>56</td>
+                        <td>Clear</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>13</td>
+                        <td>63</td>
                         <td>3</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WNW</td>
-                        <td>44</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>34</td>
-                        <td>49</td>
+                        <td>Clear</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>15</td>
+                        <td>56</td>
                         <td>4</td>
                         <td>11</td>
                         <td>NW</td>
-                        <td>46</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
+                        <td>Clear</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>15</td>
+                        <td>49</td>
+                        <td>6</td>
+                        <td>11</td>
+                        <td>NW</td>
+                        <td>24</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
                         <td>24</td>
                         <td>44</td>
                         <td>6</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NW</td>
-                        <td>47</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>40</td>
-                        <td>5</td>
-                        <td>13</td>
-                        <td>WNW</td>
-                        <td>64</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>15</td>
-                        <td>39</td>
-                        <td>5</td>
-                        <td>13</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>31</td>
+                        <td>42</td>
+                        <td>6</td>
+                        <td>11</td>
                         <td>WNW</td>
-                        <td>66</td>
+                        <td>55</td>
                      </tr>
                   </tbody>
                </table>
@@ -752,11 +752,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "16",
+                 "15",
+                 "17",
                  "18",
                  "19",
-                 "19",
-                 "20"
+                 "19"
                ]
              },
              {
@@ -765,11 +765,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "16",
+                 "15",
+                 "17",
                  "18",
                  "19",
-                 "19",
-                 "20"
+                 "19"
                ]
              }
            ]
@@ -822,11 +822,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "32",
-                 "34",
+                 "13",
+                 "15",
+                 "15",
                  "24",
-                 "19",
-                 "15"
+                 "31"
                ]
              },
              {
@@ -834,11 +834,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "63",
                  "56",
                  "49",
                  "44",
-                 "40",
-                 "39"
+                 "42"
                ]
              },
              {
@@ -846,11 +846,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "44",
-                 "46",
-                 "47",
-                 "64",
-                 "66"
+                 "20",
+                 "22",
+                 "24",
+                 "55",
+                 "55"
                ]
              }
            ]
