--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 03:05:04 2018</p>
+         Last Run: Tue Jul 17 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Partly Cloudy</td>
                         <td>28</td>
                         <td>28</td>
-                        <td>17</td>
-                        <td>31</td>
-                        <td>1</td>
                         <td>16</td>
-                        <td>SE</td>
-                        <td>51</td>
+                        <td>32</td>
+                        <td>1</td>
+                        <td>14</td>
+                        <td>ESE</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>54</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -60,9 +60,9 @@
                         <td>0</td>
                         <td>41</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NE</td>
-                        <td>53</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,7 +170,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "17",
+                 "16",
                  "0",
                  "0"
                ]
@@ -180,7 +180,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
+                 "32",
                  "35",
                  "41"
                ]
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
                  "54",
-                 "53"
+                 "53",
+                 "52"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 03:05:04 2018</p>
+         Last Run: Tue Jul 17 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -233,48 +233,48 @@
                         <td>Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>72</td>
-                        <td>57</td>
-                        <td>3</td>
+                        <td>86</td>
+                        <td>58</td>
+                        <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>75</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>47</td>
-                        <td>57</td>
+                        <td>55</td>
+                        <td>59</td>
                         <td>2</td>
-                        <td>13</td>
-                        <td>SE</td>
-                        <td>56</td>
+                        <td>11</td>
+                        <td>ESE</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>46</td>
-                        <td>61</td>
+                        <td>55</td>
+                        <td>62</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>61</td>
+                        <td>E</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>13</td>
-                        <td>65</td>
+                        <td>35</td>
+                        <td>66</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
-                        <td>59</td>
+                        <td>72</td>
                      </tr>
                   </tbody>
                </table>
@@ -386,10 +386,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "72",
-                 "47",
-                 "46",
-                 "13"
+                 "86",
+                 "55",
+                 "55",
+                 "35"
                ]
              },
              {
@@ -397,10 +397,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "57",
-                 "61",
-                 "65"
+                 "58",
+                 "59",
+                 "62",
+                 "66"
                ]
              },
              {
@@ -408,10 +408,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "78",
+                 "71",
                  "75",
-                 "56",
-                 "61",
-                 "59"
+                 "72"
                ]
              }
            ]
@@ -428,7 +428,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 03:05:04 2018</p>
+         Last Run: Tue Jul 17 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
